Fix Chrome bug of load-more-readthroughs button causing jump to page bottom

--- a/toggltimelines/static/main.css
+++ b/toggltimelines/static/main.css
@@ -650,6 +650,7 @@ svg {
 
 .load-past-readthroughs {
   margin-top: 5px;
+  overflow-anchor: none;
 }
 
 .reading-reload {
